{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 402,
  "lineage": "88d73bb5-4531-94c6-54e7-7ac9e01f7115",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:333649804638:loadbalancer/app/application-load-balancer/5dd2782c54539473",
            "arn_suffix": "app/application-load-balancer/5dd2782c54539473",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-load-balancer-1903635959.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:333649804638:loadbalancer/app/application-load-balancer/5dd2782c54539473",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0545198a1c6fae0a9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09c5be6bb239b5704"
              },
              {
                "subnet_id": "subnet-0bd6cdba0f6bd14f2"
              }
            ],
            "subnets": [
              "subnet-09c5be6bb239b5704",
              "subnet-0bd6cdba0f6bd14f2"
            ],
            "vpc_id": "vpc-011da6c1bc4360747",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "fp-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:333649804638:listener/app/application-load-balancer/5dd2782c54539473/f420f01924819f2b",
            "certificate_arn": "arn:aws:acm:us-east-1:333649804638:certificate/b1a082f5-8904-4868-b663-e46fec65136b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:333649804638:targetgroup/ecs-target-group/7eec1e47e0517639",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:333649804638:listener/app/application-load-balancer/5dd2782c54539473/f420f01924819f2b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:333649804638:loadbalancer/app/application-load-balancer/5dd2782c54539473",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.acm-cert",
            "aws_alb.alb",
            "aws_alb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:333649804638:targetgroup/ecs-target-group/7eec1e47e0517639",
            "arn_suffix": "targetgroup/ecs-target-group/7eec1e47e0517639",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/sample/fast-api/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:333649804638:targetgroup/ecs-target-group/7eec1e47e0517639",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt_private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:route-table/rtb-0541d9c269b8eca94",
            "default_route_table_id": "rtb-0541d9c269b8eca94",
            "id": "rtb-0541d9c269b8eca94",
            "owner_id": "333649804638",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "fast-api-docker-rt-private-default"
            },
            "tags_all": {
              "Name": "fast-api-docker-rt-private-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:internet-gateway/igw-05f9463d161d69792",
            "id": "igw-05f9463d161d69792",
            "owner_id": "333649804638",
            "tags": {
              "Name": "fast-api-docker-igw"
            },
            "tags_all": {
              "Name": "fast-api-docker-igw"
            },
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:333649804638:targetgroup/ecs-target-group/7eec1e47e0517639",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:333649804638:listener-rule/app/application-load-balancer/5dd2782c54539473/f420f01924819f2b/f1e6e9f559b556d2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/sample/fast-api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:333649804638:listener-rule/app/application-load-balancer/5dd2782c54539473/f420f01924819f2b/f1e6e9f559b556d2",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:333649804638:listener/app/application-load-balancer/5dd2782c54539473/f420f01924819f2b",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.acm-cert",
            "aws_alb.alb",
            "aws_alb_listener.fp-alb-listener",
            "aws_alb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:route-table/rtb-0a3a348bd06ac2df3",
            "id": "rtb-0a3a348bd06ac2df3",
            "owner_id": "333649804638",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f9463d161d69792",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fast-api-docker-rt-public"
            },
            "tags_all": {
              "Name": "fast-api-docker-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014ce728dd194a47a",
            "route_table_id": "rtb-0a3a348bd06ac2df3",
            "subnet_id": "subnet-0200d699f4b3919cd"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt_public",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff7ad46ed861d779",
            "route_table_id": "rtb-0a3a348bd06ac2df3",
            "subnet_id": "subnet-071c42f0b32340c9f"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt_public",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ba0d338fda3f7ec",
            "route_table_id": "rtb-0a3a348bd06ac2df3",
            "subnet_id": "subnet-0bd6cdba0f6bd14f2"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec644be52f6b2a33",
            "route_table_id": "rtb-0a3a348bd06ac2df3",
            "subnet_id": "subnet-09c5be6bb239b5704"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.rt_public",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:security-group/sg-0545198a1c6fae0a9",
            "description": "control access to the application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0545198a1c6fae0a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-group",
            "name_prefix": "",
            "owner_id": "333649804638",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:security-group/sg-08a02d1a97573bc53",
            "description": "control access to the ecs cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a02d1a97573bc53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0545198a1c6fae0a9"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecs-from-alb-group",
            "name_prefix": "",
            "owner_id": "333649804638",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:security-group/sg-02205f449d7285265",
            "description": "access to public instances",
            "egress": [],
            "id": "sg-02205f449d7285265",
            "ingress": [],
            "name": "public-group-default",
            "name_prefix": "",
            "owner_id": "333649804638",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:security-group/sg-037fda24fb004545b",
            "description": "access to public rds instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037fda24fb004545b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0545198a1c6fae0a9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres-public-group",
            "name_prefix": "",
            "owner_id": "333649804638",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:subnet/subnet-0200d699f4b3919cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0200d699f4b3919cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "333649804638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-api-docker-tf-private-1"
            },
            "tags_all": {
              "Name": "fast-api-docker-tf-private-1"
            },
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:subnet/subnet-071c42f0b32340c9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071c42f0b32340c9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "333649804638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-api-docker-tf-private-2"
            },
            "tags_all": {
              "Name": "fast-api-docker-tf-private-2"
            },
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:subnet/subnet-0bd6cdba0f6bd14f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd6cdba0f6bd14f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "333649804638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-api-docker-tf-public-1"
            },
            "tags_all": {
              "Name": "fast-api-docker-tf-public-1"
            },
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:subnet/subnet-09c5be6bb239b5704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c5be6bb239b5704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "333649804638",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fast-api-docker-tf-public-2"
            },
            "tags_all": {
              "Name": "fast-api-docker-tf-public-2"
            },
            "vpc_id": "vpc-011da6c1bc4360747"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333649804638:vpc/vpc-011da6c1bc4360747",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a09d438f2a351663",
            "default_route_table_id": "rtb-0541d9c269b8eca94",
            "default_security_group_id": "sg-0865441f15646d5ab",
            "dhcp_options_id": "dopt-02dc07405497277d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011da6c1bc4360747",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0541d9c269b8eca94",
            "owner_id": "333649804638",
            "tags": {
              "Name": "fast-api-docker-vpc"
            },
            "tags_all": {
              "Name": "fast-api-docker-vpc"
            }
          }
        }
      ]
    }
  ]
}